--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
     --light: #686868;
 }
 body {
-    background-color: rgba(250, 225, 125, 0.2);
+    background-color:#106691;
     color: var(--light);
 }
 h1 {
@@ -18,8 +18,10 @@ h1 {
     font-size: 200%;
 }
 h3 {
-    text-align: left;
+    text-align: center;
     color: rgba(0, 0, 0, 0.70);
+    font-size: large;
+    margin-top: 20px;
 }
 header {
     font-size: 24px;
@@ -34,16 +36,18 @@ header {
     
 }
 header #darkener {
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.3);
     height: 16rem;
     width: 100%;
     position: absolute;
 }
 header #home {
+    display: none;
     position: absolute;
     left: 0;
     top: 0;
     left: 0;
+    color: white;
 }
 nav {
     width:80%;
@@ -88,22 +92,27 @@ nav #burger div {
 }
 
 section {
-    background-color: rgba(160, 200, 220, 0.5);
+    background-color: whitesmoke;
     width: 60%;
     position: relative;
     top: -9rem;
     border-radius: 5px;
     margin: 0 auto 50px;
     padding: 20px;
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.3);/*10px 10px 20px rgb(143, 143, 143);*/
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    text-align: center;
 }
 
 #intro {
     background-color: whitesmoke;
     display: flex;
     flex-wrap: wrap;
+    text-align: left;
 }
 
+#intro h3 {
+    text-align: left;
+}
 #profile {
     width: 40%;
     padding: 0 20px 20px 0;
@@ -112,6 +121,7 @@ section {
 
 #profile img {
     width: 100%;
+    border-radius: 5px;
 }
 #details {
     width: 60%;
@@ -123,23 +133,41 @@ section {
 }
 
 #details dl {
-    margin-top: 2rem;
+    margin-top: 1rem;
     display: flex;
     flex-wrap: wrap;
-    line-height: 2.5rem;
+    line-height: 1.7rem;
 }
 
 #details dl dt {
     width: 35%;
     font-weight: bold;
-
 }
 #details dl dd {
    
     width: 65%;
 }
 
-    
+#school dt {
+    font-weight: bold;
+    margin-top: 10px;
+}
+#work dt {
+    font-weight: bold;
+    margin-top: 10px;
+}
+#work dt {
+    font-weight: bold;
+    margin-top: 10px;
+}
+#interest dt {
+    font-weight: bold;
+    margin-top: 10px;
+}
+#timeline { /*nem a timeline element, hanem a section ami tartalmazza a timeline-t */
+    box-shadow: none;
+    background-color: transparent;
+}
 /* The actual timeline (the vertical ruler) */
 .timeline {
     position: relative;
@@ -175,7 +203,7 @@ section {
     height: 25px;
     right: -17px;
     background-color: white;
-    border: 4px solid #FF9F55;
+    border: 4px solid #106691;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
@@ -185,11 +213,18 @@ section {
 .left {
     left: 0;
 }
+.left .content {
+    box-shadow: -1px 1px 1px rgba(0,0,0,0.3);
+}
 
 /* Place the container to the right */
 .right {
     left: 50%;
 }
+.right .content {
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+}
+
 
 /* Add arrows to the left container (pointing right) */
 .left::before {
@@ -207,7 +242,7 @@ section {
 
 /* Add arrows to the right container (pointing left) */
 .right::before {
-    content: " ";
+    content: "";
     height: 0;
     position: absolute;
     top: 22px;
@@ -233,11 +268,15 @@ section {
     margin-bottom: 20px;
 }
 
+footer {
+    color: black;
+}
 /* Ha számítógépen szűkebb az ablakméret */
 @media screen and (max-aspect-ratio: 3/2) {
     /* Profilkép és adatok egymás alá */
     #intro {
         display: block;
+        margin: 0 auto;
     }
     #profile {
         width: 100%;
@@ -282,6 +321,9 @@ section {
 /* Hogyha érintős eszközön nyílik meg az oldal */
 @media (pointer:coarse) , (max-aspect-ratio: 1/1) {
     /* menü összecsukása mobilhoz */
+    #intro {
+        margin: 0 auto;
+    }
     nav {
         width: 100%;
         margin: 0 auto;
