--- a/fecske/pages/koncert.css
+++ b/fecske/pages/koncert.css
@@ -5,15 +5,18 @@
 }
 
 body {
-    background-color: black;
-    background-image: url("/fecske.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
+    background-color: whitesmoke;
+    /*filter: blur(8px);*/
 }
+
 header {
     font-size: 24px;
-    
+    background-image: url("/fecske/fecske-drot.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom; 
+    height: 10rem;
+    margin: 0;
 }
 
 header #home {
@@ -23,9 +26,10 @@ header #home {
 }
 
 header #home a{
+    font-size: 24px;
     list-style: none;
     text-decoration: none;
-    color:blue;
+    color:black;
 }
 header #home a:hover {
     border-bottom: 2px dotted teal;
@@ -45,9 +49,128 @@ nav ul {
 }
 nav ul li a{
     text-decoration: none;
-    color: blue;
+    color: black;
 }
 
 nav ul li a:hover {
     border-bottom: 2px dotted teal;
+}
+section #timeline {
+    position: relative;
+    width: 50%;
+    margin: 0 auto;
+    top: -2rem;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    text-align: left;
+    border-radius: 5px;
+    font-size: larger;
+    padding: 20px 20px;
+}
+    
+}
+#timeline { /*nem a timeline element, hanem a section ami tartalmazza a timeline-t */
+    box-shadow: none;
+    background-color: transparent;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    border-radius: 5px;
+    text-align: center;
+}
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+  
+  /* The actual timeline (the vertical ruler) */
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+  
+/* Container around content */
+.container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+  
+/* The circles on the timeline */
+.container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    border: 4px solid #106691;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+  
+/* Place the container to the left */
+.left {
+    left: 0;
+}
+.left .content {
+    box-shadow: -1px 1px 1px rgba(0,0,0,0.3);
+}
+
+/* Place the container to the right */
+.right {
+    left: 50%;
+}
+.right .content {
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+}
+
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+    content: "";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+.content {
+    padding: 0.5rem;
+    background-color: white;
+    position: relative;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
