--- a/fecske/pages/repertoar.css
+++ b/fecske/pages/repertoar.css
@@ -5,15 +5,18 @@
 }
 
 body {
-    background-color: black;
-    background-image: url("/fecske.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
+    background-color: whitesmoke;
+    /*filter: blur(8px);*/
 }
+
 header {
     font-size: 24px;
-    
+    background-image: url("/fecske/fecske-drot.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom; 
+    height: 10rem;
+    margin: 0;
 }
 
 header #home {
@@ -23,9 +26,10 @@ header #home {
 }
 
 header #home a{
+    font-size: 24px;
     list-style: none;
     text-decoration: none;
-    color:blue;
+    color:black;
 }
 header #home a:hover {
     border-bottom: 2px dotted teal;
@@ -45,7 +49,7 @@ nav ul {
 }
 nav ul li a{
     text-decoration: none;
-    color: blue;
+    color: black;
 }
 
 nav ul li a:hover {
