--- a/main.css
+++ b/main.css
@@ -23,6 +23,37 @@ h3 {
     font-size: large;
     margin-top: 20px;
 }
+p {
+    text-align: justify;
+}
+.timeline-txt {
+    text-align: center;
+}
+img {
+    display: block;
+    width: max(40%, 150px);
+    margin: 1rem auto;
+}
+img.left {
+    width: max(150px,20%);
+    margin: 0;
+    border-radius: 5px;
+    float: left;
+    padding: 0 10px 10px 0;
+}
+img.right {
+    width: max(150px,20%);
+    margin: 0;
+    border-radius: 5px;
+    float: right;
+    padding: 0 0 10px 10px;
+}
+a {
+    color: var(--light);
+}
+a:hover {
+    text-decoration: none;
+}
 header {
     font-size: 24px;
     background-image: url("kotta.jpg");
@@ -50,9 +81,11 @@ header #home {
     color: white;
 }
 nav {
-    width:80%;
+    width: 80%;
     position: absolute;
     right: 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 nav ul {
     list-style: none;
@@ -73,8 +106,8 @@ nav ul li a:hover {
     border-bottom: 3px solid teal;
 }
 nav #burger {
-    height: 4rem;
-    width: 4rem;
+    height: 3rem;
+    width: 3rem;
     position: absolute;
     right: 0;
     display: none; /*mobilos médián beállítjuk hogy flex*/
@@ -146,6 +179,22 @@ section {
 #details dl dd {
    
     width: 65%;
+}
+
+#about h1 {
+    margin: 0 0 20px;
+}
+#about h2 {
+    color: var(--dark);
+    font-size: 150%;
+    margin-bottom: 1rem;
+}
+#about p {
+    margin-bottom: 1rem;
+}
+#about .highlight {
+    font-weight: bold;
+    color: var(--dark);
 }
 
 #school dt {
@@ -268,16 +317,21 @@ section {
     margin-bottom: 20px;
 }
 
-footer {
-    color: black;
+footer nav {
+    position: static;
+    margin-left: auto;
+    margin-right: auto;
+}
+footer .social {
+    height: 24px;
+    width: 24px;
+}
+footer .social svg {
+    stroke: #fff;
 }
 /* Ha számítógépen szűkebb az ablakméret */
 @media screen and (max-aspect-ratio: 3/2) {
     /* Profilkép és adatok egymás alá */
-    #intro {
-        display: block;
-        margin: 0 auto;
-    }
     #profile {
         width: 100%;
         margin: 0 auto;
@@ -321,9 +375,6 @@ footer {
 /* Hogyha érintős eszközön nyílik meg az oldal */
 @media (pointer:coarse) , (max-aspect-ratio: 1/1) {
     /* menü összecsukása mobilhoz */
-    #intro {
-        margin: 0 auto;
-    }
     nav {
         width: 100%;
         margin: 0 auto;
