--- a/fecske/pages/members.css
+++ b/fecske/pages/members.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: rgb(29, 29, 110);
     margin:0;
     padding:0;
     border:0;
@@ -14,19 +14,18 @@ body {
 
 header {
     font-size: 24px;
-    /*background-image: url("/fecske/fecske-drot.jpg");*/
+    background-image: url("/fecske/fecske-drot.jpg");   
     background-color: royalblue;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom; 
-    height: 5rem;
+    height: 10rem;
     margin: 0;
 }
 
 header #home {
     position: absolute;
     left: 0;
-    border: dotted yellow;
 }
 
 header #home a{
@@ -36,7 +35,7 @@ header #home a{
     color:black;
 }
 header #home a:hover {
-    border-bottom: 2px dotted teal;
+    border-bottom: 2px solid teal;
 }
 nav {
     width: 60%;
@@ -57,10 +56,10 @@ nav ul li a{
 }
 
 nav ul li a:hover {
-    border-bottom: 2px dotted teal;
+    border-bottom: 2px solid teal;
 }
 section {
-    background-color: royalblue;
+    background-color: whitesmoke;
     position: relative;
     width: 50%;
     top: -2rem;
@@ -82,7 +81,7 @@ section p {
 }
 
 #proba {
-    background-color: gainsboro;
+    background-color: transparent;
     position: relative;
     float: left;
     width: 20%;
@@ -90,16 +89,17 @@ section p {
 }
 
 #jel {
-    background-color: gainsboro;
+    background-color: transparent;
     position: relative;
     float: right;
     width: 20%;
     height: 130.5vh;
 
 }
-#footer {
-    background-color: royalblue ;
-    margin: 0;
-    border:0;
-    padding: 0;
+footer {
+    margin: 0 auto;
+    height: 5rem;
+    background-color: whitesmoke;
+    border-top:2px solid teal;
+    text-align: center;
 }
