--- a/fecske/pages/repertoar.css
+++ b/fecske/pages/repertoar.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: rgb(29, 29, 110)
     /*filter: blur(8px);*/
 }
 
@@ -22,7 +22,6 @@ header {
 header #home {
     position: absolute;
     left: 0;
-    border: dotted yellow;
 }
 
 header #home a{
@@ -32,7 +31,7 @@ header #home a{
     color:black;
 }
 header #home a:hover {
-    border-bottom: 2px dotted teal;
+    border-bottom: 2px solid teal;
 }
 nav {
     width: 60%;
@@ -53,5 +52,63 @@ nav ul li a{
 }
 
 nav ul li a:hover {
-    border-bottom: 2px dotted teal;
+    border-bottom: 2px solid teal;
+}
+footer {
+    height: 5rem;
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: space-evenly;
+    border-top: 2px solid teal;
+    margin: 0 auto 0;
+    top: 0px;
+    width: 100%;
+}
+
+}
+h2 {
+    text-align: center;
+}
+
+section {
+    width: 60%;
+    margin: 0 auto 20px;
+    position: relative;
+    background-color: whitesmoke;
+    padding: 20px 20px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    padding: 20px 20px;
+    top: -2rem;
+
+}
+#muvek {
+    top: -2rem;
+
+}
+
+#kari {
+    top: -2rem;
+}
+
+dl {
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    line-height: 1.7rem;
+    position: relative;
+    justify-content: center;
+}
+
+dl dt {
+    width: 50%;
+    font-weight: bold;
+    text-align: left;
+}
+
+dl dd {
+    width: 50%;
+    text-align: left;
+    
 }
