--- a/fecske/pages/about.css
+++ b/fecske/pages/about.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Cormorant+Garamond:ital,wght@0,500;0,700;1,400&family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Dancing+Script&family=Lora:ital,wght@0,400;0,600;1,400&family=Shadows+Into+Light&family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400&display=swap');
 * {
     margin:0;
     padding:0;
@@ -7,10 +8,12 @@
 body {
     background-color:  rgb(29, 29, 110);
     /*filter: blur(8px);*/
+    font-family: 'Lora', serif;
 }
 
 header {
     font-size: 24px;
+    /*font-family: 'Shadows Into Light', cursive;*/
     background-image: url("/fecske/fecske-drot.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -22,6 +25,8 @@ header {
 header #home {
     position: absolute;
     left: 0;
+    left: 10px;
+    font-family: 'Dancing Script', cursive;
 }
 
 header #home a{
@@ -31,7 +36,9 @@ header #home a{
     color:black;
 }
 header #home a:hover {
-    border-bottom: 2px solid teal;
+    /*border-bottom: 2px solid teal;*/
+    /*font-size: 30px;*/
+    text-shadow: 1px 1px black;
 }
 nav {
     width: 60%;
@@ -52,7 +59,9 @@ nav ul li a{
 }
 
 nav ul li a:hover {
-    border-bottom: 2px solid teal;
+    /*border-bottom: 2px solid teal;*/
+    /*font-size: 30px;*/
+    text-shadow: 1px 1px black;
 }
 #proba {
     text-align: center;
@@ -87,10 +96,16 @@ section h3 {
     margin: 20px 0 10px;
     text-align: left;
 }
+#fioka,
+#fioka h3,
+#fioka p {
+    text-align: center;
+}
 
 footer {
     height: 10rem;
-    background-color: whitesmoke;
+    background-color: black;
+    color:mintcream;
     display: flex;
     justify-content: space-evenly;
     border-top:2px solid teal;
