--- a/fecske/style.css
+++ b/fecske/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Cormorant+Garamond:ital,wght@0,500;0,700;1,400&family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Dancing+Script&family=Lora:ital,wght@0,400;0,600;1,400&family=Shadows+Into+Light&family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400&display=swap');
 * {
     margin:0;
     padding:0;
@@ -10,6 +11,7 @@ body {
     background-image: url("/fecske/fecske-drot.jpg");
     background-size: cover;
     margin:0;
+    font-family: 'Lora', serif;
 }
 
 header {
@@ -25,17 +27,21 @@ header {
 
 header #home {
     position: absolute;
-    left: 0;
+    left: 10px;
+    font-family: 'Dancing Script', cursive;
+
 }
 
 header #home a {
     font-size: 24px;
     list-style: none;
     text-decoration: none;
-    color:black;
+    color:whitesmoke;
 }
 header #home a:hover {
-    border-bottom: 2px solid teal;
+    /*border-bottom: 2px solid teal;*/
+    /*font-size: 30px;*/
+    text-shadow: 1px 1px black;
 }
 nav {
     width: 60%;
@@ -52,11 +58,13 @@ nav ul {
 
 nav ul li a{
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
 }
 
 nav ul li a:hover {
-    border-bottom: 2px solid teal;
+    /*border-bottom: 2px solid teal;*/
+    /*font-size: 30px;*/
+    text-shadow: 1px 1px black;
 }
 #parent {
     height: 100vh;
@@ -72,10 +80,11 @@ nav ul li a:hover {
     /*outline: 1px solid green;*/
     font-size: 64px;
     color: mintcream;
+    font-family: 'Dancing Script', cursive;
 }
 #body-img {
-    width: 110%;
-    height: 110%;
+    width: 100%;
+    height: 100%;
 }
 #random-content {
     margin: 0;
@@ -89,8 +98,9 @@ nav ul li a:hover {
 }
 footer {
     margin: 0 auto;
-    height: 5rem;
-    background-color: whitesmoke;
+    height: 3rem;
+    background-color: black;
+    color:mintcream;
     border-top:2px solid teal;
 }
  footer p {
