--- a/fecske/pages/about.css
+++ b/fecske/pages/about.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Cormorant+Garamond:ital,wght@0,500;0,700;1,400&family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Dancing+Script&family=Lora:ital,wght@0,400;0,600;1,400&family=Shadows+Into+Light&family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lora:ital,wght@0,400;0,600;1,400&display=swap');
 * {
     margin:0;
     padding:0;
@@ -75,7 +75,7 @@ nav ul li a:hover {
     text-align: center;
 }
 section {
-    background-color: rgba(245, 245, 245, 0.95);
+    background-color: #eaeaee;/*rgba(245, 245, 245, 0.95);*/
     position: relative;
     width: 50%;
     top: -2rem;
@@ -83,18 +83,44 @@ section {
     margin: 0 auto 2rem;
     border-radius: 5px;
     text-align: left;
-    font-size: larger;
     box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
 }
-
 section h1 {
     margin: 10px;
     text-align: center;
 }
-
 section h3 {
     margin: 20px 0 10px;
     text-align: left;
+}
+.readmore {
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom, transparent 0%, #eaeaee 75%);
+    cursor: pointer;
+    text-align: center;
+}
+.readmore span {
+    display: none;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    bottom: 0;
+    font-weight: bold;
+}
+.intro.shortened {
+    height: 160px;
+    overflow-y: hidden;
+}
+.intro.shortened:hover {
+    height: 170px;
+    margin-bottom: calc(2rem - 10px);
+}
+.intro.shortened:hover .readmore span {
+    display: block;
 }
 #fioka,
 #fioka h3,
@@ -116,7 +142,7 @@ footer {
     position: relative;
     top:0;
     border-radius: 0;
-    box-shadow: 0;
+    box-shadow: none;
     margin: 0;
 
 
