--- a/fecske/pages/members.css
+++ b/fecske/pages/members.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Cormorant+Garamond:ital,wght@0,500;0,700;1,400&family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Dancing+Script&family=Lora:ital,wght@0,400;0,600;1,400&family=Shadows+Into+Light&family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lora:ital,wght@0,400;0,600;1,400&display=swap');
 * {
     margin:0;
     padding:0;
@@ -64,18 +64,31 @@ nav ul li a:hover {
     /*font-size: 30px;*/
     text-shadow: 0.2px 0.2px black;
 }
+
+#container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: stretch;
+    padding: 20px 20px;
+    margin: 0 auto;
+}
+#jel,
+#proba {
+    width: 20%;
+}
+#map {
+    margin: 20px 0;
+}
 section {
     background-color: whitesmoke;
     position: relative;
-    width: 50%;
+    width: 40%;
     top: -2rem;
-    padding: 20px 20px 0;
-    margin: 0 auto;
+    padding: 20px 20px;
     border-radius: 5px;
     text-align: center;
-    font-size: larger;
     box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
-    float: center;
 }
 section h1 {
     margin: 10px 10px 30px;
@@ -86,25 +99,6 @@ section p {
     padding: 20px;
 }
 
-#proba {
-    background-color: mintcream;
-    position: relative;
-    float: left;
-    width: 20%;
-    height: 50vh;
-    top:10rem;
-    vertical-align: middle;
-}
-
-#jel {
-    background-color: mintcream;
-    position: relative;
-    float: right;
-    width: 20%;
-    height: 50vh;
-    top:10rem;
-    vertical-align: middle;
-}
 footer {
     margin: 0 auto;
     height: 5rem;
